[workspace]
members = [
    "src/bk2-format",
    "src/cyclone-v",
    "src/de10-nano",
    "src/fce-movie-format",
    "src/golem",
    "src/golem-core",
    "src/golem-db",
    "src/golem-script-host",
    "src/golem-ui",
    "src/junior",
    "src/mister-fpga",
    "src/senior",
    "src/taser",
]
resolver = "2"

[profile.release]
lto = true
overflow-checks = false
panic = "abort"
strip = true
debug = false

[profile.dev]
overflow-checks = false
debug = 0
panic = "abort"

