[workspace]
resolver = "2"
members = [
    "src/bk2-format",
    "src/cyclone-v",
    "src/de10-nano",
    "src/fce-movie-format",
    "src/firmware",
    "src/firmware-script",
    "src/firmware-ui",
    "src/games-db-converter",
    "src/one-fpga",
    "src/mister-fpga",
    "src/taser",
]

[profile.release]
lto = true
overflow-checks = false
panic = "abort"
strip = true
debug = false

[profile.dev]
overflow-checks = false
debug = 0
panic = "abort"

[workspace.lints.rust]
unused_crate_dependencies = "warn"

[workspace.dependencies]
image = "0.25"
ouroboros = "0.18"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
sdl3 = { version = "0.5.0", features = ["bundled"] }
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "2.0.3"
time = { version = "0.3", features = ["local-offset"] }
url = { version = "2.5" }

# Repo crates
bk2-format = { path = "src/bk2-format" }
cyclone-v = { path = "src/cyclone-v" }
de10-nano = { path = "src/de10-nano" }
fce-movie-format = { path = "src/fce-movie-format" }
firmware = { path = "src/firmware" }
firmware-ui = { path = "src/firmware-ui" }
firmware-script = { path = "src/firmware-script" }
one-fpga = { path = "src/one-fpga", version = "0.1.0" }
junior = { path = "src/junior" }
mister-fpga = { path = "src/mister-fpga" }
senior = { path = "src/senior" }
taser = { path = "src/taser" }
