[package]
name = "datary"
version = "0.1.0"
edition = "2021"
authors = ["Hans Larsen <hans.larsen@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ouroboros = { version = "0.18.0", optional = true }
quick-xml = { version = "0.31.0", features = ["serialize"] }
serde = { version = "1", features = ["derive"] }
thiserror = "1.0.50"

[dev-dependencies]
pretty_assertions = "1.4.0"
rstest = "0.18.2"

[features]
default = ["optimized"]
# Allow for an optimized datafile type which facilitates faster reads and writes.
optimized = ["ouroboros"]
