[package]
name = "mister-fpga"
version = "0.1.0"
edition = "2021"
description = "A Rust library to work with the MiSTer FPGA Cores API."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1.0.1"
crc32fast = "1.3.2"
cyclone-v = { path = "../cyclone_v", version = "0.1" }
embedded-graphics = "0.8.1"
fixed-map = "0.9.3"
itertools = "0.12.0"
libc = "0.2.150"
nom = "7.1.3"
nom_locate = "4.2.0"
num-traits = "0.2.15"
once_cell = "1.18.0"
regex = "1.10.2"
sdl3 = "0.4.0"
static_assertions = "1.1.0"
strum = { version = "0.25.0", features = ["derive"] }
tracing = "0.1.40"
