[package]
name = "superscope"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
clap-verbosity-flag = "2.2.0"
core_affinity = "0.8.1"
fce-movie-format = { path = "../fce-movie-format" }
mister-fpga = { path = "../mister-fpga", default-features = true }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
