[package]
name = "one_fpga"
version = "0.2.0"
edition = "2018"
build = "build.rs"

[dependencies]
clap = { version = "4.3.5", features = ["derive"] }
clap-verbosity-flag = "2.0.1"
core_affinity = "0.8.1"
de10-nano = { path = "../de10-nano", optional = true }
firmware-script.workspace = true
firmware-ui.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[build-dependencies]
vergen = { version = "8.2.4", features = ["build", "git", "gitoxide"] }

[features]
default = ["platform_desktop"]
# Support for the DE10-Nano board.
platform_de10 = ["de10-nano", "firmware-ui/platform_de10", "firmware-script/platform_de10"]
# Support for a desktop simulator.
platform_desktop = []

