[package]
name = "games-db-converter"
version = "0.1.0"
edition = "2021"

[dependencies]
strum.workspace = true

clap = { version = "4.5.19", features = ["derive"] }
csv = "1.3.0"
either = "1.13.0"
quick-xml = { version = "0.36.2", features = ["serialize"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
