[package]
name = "one-fpga"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image.workspace = true

byteorder = "1.5.0"
sdl3 = { version = "0.5.0" }
serde = { version = "1.0.198", features = ["derive"] }
static_assertions = "1.1"
strum = { version = "0.26.2", features = ["derive"] }
thiserror = "1.0.59"
