[package]
name = "one-fpga"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image.workspace = true
sdl3.workspace = true
strum.workspace = true

byteorder = "1.5.0"
serde = { version = "1.0.198", features = ["derive"] }
static_assertions = "1.1"
thiserror = "1.0.59"
