[package]
name = "golem-script"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image.workspace = true
one-fpga.workspace = true
ouroboros.workspace = true
reqwest.workspace = true
time.workspace = true
strum.workspace = true

boa_engine = { git = "https://github.com/hansl/boa.git", branch = "golem-script", features = ["either"] }
boa_gc = { git = "https://github.com/hansl/boa.git", branch = "golem-script" }
boa_interop = { git = "https://github.com/hansl/boa.git", branch = "golem-script" }
boa_macros = { git = "https://github.com/hansl/boa.git", branch = "golem-script" }
boa_runtime = { git = "https://github.com/hansl/boa.git", branch = "golem-script" }
de10-nano = { path = "../de10-nano" }
directories = "5.0.1"
ed25519 = "2.2.3"
ed25519-dalek = { version = "2.1.1", features = ["pem"] }
either = "1"
enum-map = { version = "3.0.0-beta.2", features = ["derive"] }
golem-ui = { path = "../golem-ui", default-features = false }
include_dir = "0.7.4"
mister-fpga = { path = "../mister-fpga" }
nix = { version = "0.29.0", features = ["net"] }
ping = "0.5.2"
regex = "1.10.4"
rusqlite = { version = "0.32.1", features = ["bundled", "serde_json"] }
rustc-hash = "2.0.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
sha2 = { version = "0.11.0-pre.4" }
tempdir = "0.3.7"
tracing = "0.1.40"
valico = "4.0.0"
walkdir = "2.5.0"
url = "2.5.2"

[features]
platform_de10 = ["golem-ui/platform_de10"]
