[package]
name = "golem-ui"
version = "0.0.1"
edition = "2018"

[dependencies]
image.workspace = true

anyhow = "1.0.75"
bitfield = "0.14.0"
bitvec = "1.0.1"
bus = "2.4.0"
byteorder = "1.4.3"
cfg-if = "1.0.0"
chrono = "0.4.26"
clap = { version = "4.3.5", features = ["derive"] }
clap-verbosity-flag = "2.0.1"
core_affinity = "0.8.1"
crossbeam-channel = "0.5.8"
crossbeam-queue = "0.3.8"
crossbeam-utils = "0.8.16"
crc32fast = "1.3.2"
cyclone-v = "0.1.0"
datary = { version = "0.1.0" }
de10-nano = { path = "../de10-nano", optional = true }
debounce = "0.2.2"
derive_builder = "0.20.0"
dirs = "5.0.1"
either = { version = "1.9.0", features = ["serde"] }
embedded-graphics = "0.8.1"
embedded-layout = "0.4.1"
embedded-menu = "0.6.1"
embedded-text = "0.6.6"
fixed-map = "0.9.3"
framebuffer = "0.3.1"
golem-db = { path = "../golem-db" }
hex = "0.4.3"
humansize = "2.1.3"
identity-hash = { version = "0.1.0", features = ["std"] }
itertools = "0.12.0"
json5 = "0.4.1"
json5format = "0.2.6"
libc = { version = "0.2.150" }
memmap2 = "0.9.4"
merge = { git = "https://github.com/hansl/merge-rs.git", rev = "dcaf63c0ef296e93219a5393a8252302170b5e42", features = ["num", "derive"] }
md5 = "0.7.0"
mister-fpga = { path = "../mister-fpga", version = "0.1" }
network-interface = "1.0.1"
num-integer = "0.1.45"
num-traits = "0.2.15"
once_cell = "1.18.0"
one-fpga = { workspace = true }
ouroboros = "0.18.0"
parking_lot = "0.12.1"
qrcode = { version = "0.14.0", features = ["image"] }
regex = "1.9.3"
reqwest = { version = "0.11.22", features = ["blocking", "json", "rustls-tls"], default-features = false }
retronomicon-dto = { version = "0.2.3" }
sdl3 = { version = "0.5.0", features = ["bundled"] }
serde = { version = "1.0.164", features = ["derive"] }
serde-hex = "0.1.0"
serde_json = "1.0.64"
serde_with = { version = "3.0.0", features = ["hex"] }
sha1 = "0.10.6"
sha2 = "0.10.8"
strum = { version = "0.25.0", features = ["derive"] }
tempdir = "0.3.7"
thiserror = "1.0.40"
tinybmp = "0.5.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["tracing-log", "env-filter"] }
u8g2-fonts = { version = "0.3.0", features = ["embedded_graphics_textstyle"] }
walkdir = "2.3.3"

[dev-dependencies]
tempdir = "0.3.7"

[features]
default = ["platform_de10"]
# Support for the DE10-Nano board.
platform_de10 = ["de10-nano"]
platform_desktop = []
