[package]
name = "mister-fpga"
version = "0.1.0"
edition = "2021"
description = "A Rust library to work with the MiSTer FPGA Cores API."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image.workspace = true
one-fpga.workspace = true

array_map = "0.4.0"
bitfield = "0.15.0"
bitvec = "1.0.1"
cfg-if = "1.0.0"
chrono = "0.4.31"
crc32fast = "1.3.2"
cyclone-v = { path = "../cyclone-v", version = "0.1" }
embedded-graphics = "0.8.1"
fixed-map = "0.9.3"
glam = "0.25.0"
hex = "0.4.3"
i2cdev = "0.6.0"
itertools = "0.12.0"
json5 = "0.4.1"
libc = "0.2.150"
merge = { git = "https://github.com/hansl/merge-rs.git", rev = "dcaf63c0ef296e93219a5393a8252302170b5e42", features = ["num", "derive"] }
nom = "7.1.3"
nom_locate = "4.2.0"
num-traits = "0.2.15"
once_cell = "1.18.0"
regex = "1.10.2"
sdl3 = { version = "0.5.0", optional = true, features = ["bundled"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_with = "3.6.1"
simple_endian = "0.3.2"
static_assertions = "1.1"
strum = { version = "0.25.0", features = ["derive"] }
thiserror = "1.0.50"
tracing = "0.1.40"
typed-builder = "0.18.1"
validator = { version = "0.16.1", features = ["derive"] }

[dev-dependencies]
hex = "0.4.3"
pretty_assertions = "1.4.0"
rstest = "0.18.2"
tempdir = "0.3.7"

[features]
default = []
sdl = ["sdl3"]
