[package]
name = "one-fpga"
version = "0.1.0"
edition = "2021"
authors = ["Hans Larsen <hans.larsen@gmail.com>"]
readme = "README.md"
description = "One FPGA general traits and types."
repository = "https://github.com/1fpga/firmware.git"
license = "MIT"
keywords = ["onefpga"]
categories = ["embedded"]
homepage = "https://github.com/1fpga/firmware"
documentation = "https://docs.rs/one-fpga"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image.workspace = true
sdl3.workspace = true
strum.workspace = true

byteorder = "1.5.0"
serde = { version = "1.0.198", features = ["derive"] }
static_assertions = "1.1"
thiserror.workspace = true
