[package]
name = "senior"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
clap-verbosity-flag = "2.0.1"
mister-fpga = { version = "0.1.0", path = "../mister-fpga", default-features = false, features = [] }
rocket-multipart-form-data = "0.10.6"
schemars = "0.8.16"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["tracing-log", "env-filter"] }
tracing-log = "0.2.0"

[dependencies.rocket]
version = "0.5.0"
features = ["json"]

[dependencies.rocket_okapi]
#git = "https://github.com/hansl/okapi.git"
#rev = "42aef7e"
git = "https://github.com/GREsau/okapi.git"
rev = "fa77b69"
version = "0.8.0-rc.3"
features = ["swagger", "rapidoc"]
