[package]
name = "taser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
clap-verbosity-flag = "2.2.0"
core_affinity = "0.8.1"
fce-movie-format = { path = "../fce-movie-format" }
humantime = { git = "https://github.com/hansl/humantime.git", rev = "70e660a" }
mister-fpga = { workspace = true, default-features = true }
one-fpga = { workspace = true, default-features = true }
tracing.workspace = true
tracing-subscriber.workspace = true
